--- a/PTS/Web.config
+++ b/PTS/Web.config
@@ -11,7 +11,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="Newtonsoft.Json" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
