--- a/PTS/Web.config
+++ b/PTS/Web.config
@@ -15,6 +15,9 @@
       <assemblies>
         <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="Newtonsoft.Json" />
+       <!-- <add assembly="PresentationCore" />
+        <add assembly="PresentationFramework" />
+        <add assembly="WindowsBase, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />-->
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.7.2" />
