--- a/PTS/packages.config
+++ b/PTS/packages.config
@@ -18,5 +18,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
+  <package id="QRCoder" version="1.3.9" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
